# cmake_pybind_ci

./: .gitignore  CMakeLists.txt  README.md  build.py  pyproject.toml
.github/workflows/: ci.yml  wheels.yml
